--- a/index.html
+++ b/index.html
@@ -489,10 +489,7 @@
 
       <p style="color: #525252" class="text-center">A responsive web map application template with built-in geospatial
         tools using Bootstrap and Mapbox GL.
-        Check out the
-        <a href="https://cdettlaff.github.io./" target="_blank" style="color: #1c8de0;"> <b>demo</b></a> or get the code on <a
-        href="https://github.com/portofportlandgis/portmap" target="_blank" style="color: #1c8de0;"><i
-          class="fab fa-github"></i> <b>Github</b>.</a>
+        Check out the code on <a href="https://github.com/portofportlandgis/portmap" target="_blank" style="color: #1c8de0;"><i class="fab fa-github"></i> <b>Github</b>.</a>
           New to coding? No worries. We created a tutorial that's designed to teach you how access PortMap, 
           add geographic data, and make that data interactive. You can find the tutorial
           <a href="https://opensource.portofportland.io/portmap-tutorial.html" target="_blank" style="color: #1c8de0;"><i class="fas fa-link"></i><b> here</b></a>
